bad/assign_field_bool_new_class_int.example_compiler_output
ERROR
[1mbad/assign_field_bool_new_class_int.lat:7:14: [1;31merror: [0;1massigning to `boolean` from incompatible type `int`[m
	(new C).fld = 42;
	            [1;32m^[m
